add draft CRUD operation for post and comment
